2000-01-31  Havoc Pennington  <hp@redhat.com>

	* gtkpixmapmenuitem.h (struct _GtkPixmapMenuItemClass): new class
	fields to track the number of GtkPixmapMenuItem that actually have
	pixmaps; if none, then we drop the toggle size to that of a
	standard menu item. Basically this means that now if you turn off
	pixmaps there isn't a big gap on the left of your menus.

	* gtkpixmapmenuitem.c (gtk_pixmap_menu_item_init): remove
	pointless set of toggle_size field in menu item instance
	(gtk_pixmap_menu_item_class_init): don't set the menu item class
	toggle size until we actually get a pixmap
	(gtk_pixmap_menu_item_class_init): init new class fields

Sun Jan 30 16:58:54 2000  George Lebl <jirka@5z.com>

	* gnome-dentry-edit.c: properly cast dentry->exec

2000-01-30  Havoc Pennington  <hp@pobox.com>

	* gnome-gconf.c (gnome_gconf_post_args_parse): Add the
	"/desktop/gnome" gconf dir

	* gnome-app-helper.c (create_pixmap): remove the window argument,
	since gnome-stock is no longer this lame
	(create_menu_item): Call setup_pixmap_menu_item
	(setup_pixmap_menu_item): new function sets up a pixmap menu item
	to respond appropriately to changes in whether menu icons should
	be displayed	

	* libgnomeui.h (GNOMEUI_INIT): Add GConf to the default
	initialization, include gnome-gconf.h	
	
Sun Jan 30 15:44:35 2000  George Lebl <jirka@5z.com>

	* gnome-dentry-edit.c: use gnome_config_assemble_vector instead of
	  g_flatten_vector to fix bug #1372

2000-01-30  Havoc Pennington  <hp@pobox.com>

	* gnome-file-saver.c (gnome_file_saver_init): use
	gnome_get_gconf_client()

	* gnome-recently-used.c (gnome_recently_used_construct): Use new
	name gnome_get_gconf_client()

	* gnome-gconf.c (gnome_gconf_client_get): Rename to
	gnome_get_gconf_client()

2000-01-30  Havoc Pennington  <hp@pobox.com>

	* gnome-dialog.c (gnome_dialog_run_real): Create a new GMainLoop
	to avoid problems with quitting the wrong mainloop with
	gtk_main()/gtk_main_quit()
